# cambalache

./: .flake8  .gitignore  .gitmodules  .local.env  CHANGELOG.md  Dockerfile  Makefile  README.mac.md  README.md  README_MS_Windows.md  SUPPORTERS.md  TODO.md  ar.xjuan.Cambalache.json  coverage.sh  env.sh  meson.build  meson.options  postinstall.py  pyproject.toml  run-dev.py  run-dev.sh  run-tests-with-coverage.sh  run-tests.sh
cambalache/: __init__.py  cambalache.cmb  cambalache.css  cambalache.gresource.xml  cmb_accessible_editor.py  cmb_base.py  cmb_base_file_monitor.py  cmb_base_objects.py  cmb_binding_popover.py  cmb_binding_popover.ui  cmb_blueprint.py  cmb_column_view.py  cmb_context_menu.py  cmb_context_menu.ui  cmb_css.py  cmb_css_editor.py  cmb_css_editor.ui  cmb_db.py  cmb_db_inspector.py  cmb_db_inspector.ui  cmb_db_migration.py  cmb_db_profile.py  cmb_file_changed_bar.py  cmb_file_changed_bar.ui  cmb_file_monitor.py  cmb_file_status_bar.py  cmb_file_status_bar.ui  cmb_fragment_editor.py  cmb_fragment_editor.ui  cmb_graphics_offload.py  cmb_gresource.py  cmb_gresource_editor.py  cmb_gresource_editor.ui  cmb_layout_property.py  cmb_library_info.py  cmb_library_row.py  cmb_library_row.ui  cmb_list_error.py  cmb_list_store.py  cmb_list_view.py  (+55 more)
cambalache/app/: __init__.py  app.gresource.xml  cambalache.css  cambalache.in  cmb_application.py  cmb_donate_dialog.py  cmb_donate_dialog.ui  cmb_help_window.py  cmb_help_window.ui  cmb_np_dialog.py  cmb_np_dialog.ui  cmb_np_page.py  cmb_np_page.ui  cmb_picture.py  cmb_scrolled_window.py  cmb_shortcuts.ui  cmb_tutor.py  cmb_tutorial.py  cmb_window.py  cmb_window.ui  help.gresource.xml  meson.build  metainfo.xml
cambalache/app/images/: logo-dark.gpa  logo.gpa
cambalache/control/: __init__.py  cmb_boolean_undefined.py  cmb_child_type_combo_box.py  cmb_color_entry.py  cmb_create_editor.py  cmb_entry.py  cmb_enum_combo_box.py  cmb_file_button.py  cmb_file_button.ui  cmb_file_entry.py  cmb_flags_entry.py  cmb_icon_name_entry.py  cmb_object_chooser.py  cmb_object_list_editor.py  cmb_pixbuf_entry.py  cmb_property_chooser.py  cmb_source_view.py  cmb_spin_button.py  cmb_suggestion_entry.py  cmb_switch.py  cmb_text_buffer.py  cmb_text_view.py  cmb_text_view.ui  cmb_toplevel_chooser.py  cmb_translatable_popover.py  cmb_translatable_widget.py  cmb_translatable_widget.ui  icon_naming_spec.py  meson.build  named_colors.py
cambalache/db/: cmb_base.sql  cmb_history.sql  cmb_project.sql
cambalache/merengue/: __init__.py  config.py.in  merengue.css  merengue.in  meson.build  mrg_application.py  mrg_controller.py  mrg_controller_registry.py  mrg_css_provider.py  mrg_placeholder.py  utils.py
cambalache/merengue/common/: meson.build  mrg_command.py
cambalache/merengue/mrg_adw/: __init__.py  mrg_adw_application_window.py  mrg_adw_bin.py  mrg_adw_carousel.py  mrg_adw_dialog.py  mrg_adw_view_stack.py  mrg_adw_view_stack_page.py  mrg_adw_window.py
cambalache/merengue/mrg_gtk/: __init__.py  mrg_g_binding.py  mrg_gtk_aspect_frame.py  mrg_gtk_assistant.py  mrg_gtk_bin.py  mrg_gtk_box.py  mrg_gtk_center_box.py  mrg_gtk_dialog.py  mrg_gtk_expander.py  mrg_gtk_frame.py  mrg_gtk_grid.py  mrg_gtk_label.py  mrg_gtk_list_box.py  mrg_gtk_list_box_row.py  mrg_gtk_menu.py  mrg_gtk_menu_item.py  mrg_gtk_notebook.py  mrg_gtk_overlay.py  mrg_gtk_paned.py  mrg_gtk_popover.py  mrg_gtk_revealer.py  mrg_gtk_scrolled_window.py  mrg_gtk_stack.py  mrg_gtk_stack_page.py  mrg_gtk_viewport.py  mrg_gtk_widget.py  mrg_gtk_window.py  mrg_selection.py
cambalache/merengue/mrg_handy/: __init__.py  mrg_container.py  mrg_hdy_deck.py  mrg_hdy_leaflet.py  mrg_hdy_search_bar.py
cambalache/merengue/mrg_webkit/: __init__.py  mrg_webkit_web_view.py
cambalache/mrg_command/: __init__.py  meson.build  mrg_command.py
cambalache/private/: cmb_private.c  cmb_private.h  cmb_private_svg.c  cmb_private_svg.h  cmb_private_svg_private.h  meson.build
catalogs/: Makefile  meson.build
catalogs/atk/: Atk.xml  atk-1.0.xml
catalogs/gdkpixbuf/: gdkpixbuf-2.0.xml
catalogs/glib/: Gio.xml  gio-2.0.xml  gobject-2.0.xml
catalogs/gnome/: Adwaita.xml  Handy.xml  WebKit2.xml  casilda-1.0.xml  libadwaita-1.xml  libhandy-1.xml  webkit2gtk-4.1.xml  webkit2gtk-5.0.xml  webkitgtk-6.0.xml
catalogs/gtk/: Gtk.xml  gdk-3.0.xml  gdk-4.0.xml  gsk-4.0.xml  gtk+-3.0.xml  gtk-4.0.xml
catalogs/pango/: pango-1.0.xml
data/: ar.xjuan.Cambalache.gschema.xml  ar.xjuan.Cambalache.metainfo.xml.in  ar.xjuan.Cambalache.mime.xml  cambalache-catalog.dtd  cambalache-project.dtd  meson.build
data/icons/: meson.build
glade/: gladecambalache.xml
lib/: cambalache.h  cmb_compositor.c  cmb_compositor.h  cmb_wayland_source.c  cmb_wayland_source.h  meson.build
lib/wlroots/: 0001-Use-c11-C-version.patch
po/: LINGUAS  (+17 more)
tests/: __init__.py  cmb_init_dev.py  cmb_run_dev.py  compare.sh  coverage.sh  meson.build  test_cmb_blueprint.py  test_cmb_gui.py  test_cmb_notification.py  test_cmb_object.py  test_cmb_window.py  test_enum_flags.py  test_format_migration.py  test_import_export.py  test_merengue_xml.py  test_project_catalogs.py  test_undo_redo.py  tests_gtk3.cmb  tests_gtk4.cmb  utils.py  weston.ini
tests/gtk+-3.0/: accessibility.ui  bindings.ui  children.ui  comboboxtext.ui  custom_fragment.ui  custom_type.ui  dialog.ui  filefilter.ui  label.ui  levelbar.ui  liststore.ui  menu.ui  packing.ui  scale.ui  signals.ui  sizegroup.ui  style.ui  template.ui  test_column_constraint_changes_0.17.3.cmb  test_project_0.10.3.cmb  treestore.ui  window.ui
tests/gtk-4.0/: accessibility.ui  bindings.ui  children.ui  comboboxtext.ui  custom_fragment.ui  custom_type.ui  enum_and_flags.ui  expression.ui  filefilter.ui  inline_object.ui  label.ui  layout.ui  liststore.ui  menu.ui  signals.ui  stack_page.ui  string_list.ui  style.ui  template.ui  template_inline_object.cmb  test_column_constraint_changes_0.17.3.cmb  test_project_0.10.3.cmb  treestore.ui  ui_comments.ui  window.ui
tools/cmb_catalog_gen/: __init__.py  cmb-catalog-gen.in  cmb_catalog_db.py  cmb_catalog_utils.c  cmb_catalog_utils.h  cmb_gir_data.py  meson.build
(+12 files in other folders)
