moduledir = join_paths(modulesdir, 'cambalache', 'control')


install_data([
    'cmb_child_type_combo_box.py',
    'cmb_entry.py',
    'cmb_file_entry.py',
    'cmb_icon_name_entry.py',
    'cmb_pixbuf_entry.py',
    'cmb_spin_button.py',
    'cmb_text_buffer.py',
    'cmb_toplevel_chooser.py',
    'cmb_color_entry.py',
    'cmb_create_editor.py',
    'cmb_enum_combo_box.py',
    'cmb_flags_entry.py',
    'cmb_object_chooser.py',
    'cmb_source_view.py',
    'cmb_switch.py',
    'cmb_text_view.py',
    'cmb_translatable_popover.py',
    'cmb_translatable_widget.py',
    'icon_naming_spec.py',
    '__init__.py',
    'named_colors.py',
    ],
    install_dir: moduledir)